Adding map to frontend

--- a/static/index.html
+++ b/static/index.html
@@ -4,10 +4,20 @@
         <title></title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="css/main.css">
+        <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
+           integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
+           crossorigin=""/>
     </head>
     <body>
-        <button id="location_btn">Use current location</button>
-        <div id="lat_long">Lat/Long</div>
+        <div class="location-bar">
+            <input id="location_input" class="location-input" type="text" placeholder="lat/long coordinates">
+            <button id="location_btn" class="location-btn" type="submit"></button>
+        </div>
+        <div id="map"></div>
+
+        <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
+            integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
+            crossorigin=""></script>
         <script src="js/main.js"></script>
     </body>
 </html>
