Change message to 'Waiting for location...'

--- a/static/index.html
+++ b/static/index.html
@@ -15,7 +15,7 @@
                 <div class="aqi-label">AQI</div>
             </div>
             <div class="aqi-message-box">
-                <div class="aqi-level transition" id="aqi-level">No location</div>
+                <div class="aqi-level transition" id="aqi-level">Waiting for location...</div>
                 <div class="aqi-message transition" id="aqi-message">You don't have a location set. Please either enable sharing your location or copy/paste lat/long coords into the box</div>
             </div>
         </div>
