Making lat/long more flexible and adding tests (and actually adding meta tags)

--- a/static/index.html
+++ b/static/index.html
@@ -1,8 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title></title>
+        <title>PurpleAir Dashboard (Unofficial)</title>
+
+        <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <meta name="description" content="Dashboard in the style of airnow.gov but with PurpleAir realtime data.">
+        <meta property="og:title" content="PurpleAir Dashboard (Unofficial)">
+        <meta property="og:image" content="https://ethanj.me/aqi/images/og-image.png">
+        <meta property="og:url" content="https://ethanj.me/aqi/">
+        <meta property="og:type" content="website">
+        <meta property="og:description" content="Unofficial PurpleAir Dashboard in the style of airnow.gov but with more realtime data." >
+
         <link rel="stylesheet" type="text/css" href="css/main.css">
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
            integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
@@ -42,8 +52,8 @@
 
         <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
             integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
-            crossorigin=""></script>
+            crossorigin="" defer></script>
         <script src="js/aqi.js"></script>
-        <script src="js/main.js"></script>
+        <script src="js/main.js" data-entrypoint="main"></script>
     </body>
 </html>
