Adding canonical URL

--- a/static/index.html
+++ b/static/index.html
@@ -6,6 +6,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+        <link rel="canonical" href="https://ethanj.me/aqi/">
+
         <meta name="description" content="Dashboard in the style of airnow.gov but with PurpleAir realtime data.">
         <meta property="og:title" content="PurpleAir Dashboard (Unofficial)">
         <meta property="og:image" content="https://ethanj.me/aqi/images/og-image.png">
