--- a/static/index.html
+++ b/static/index.html
@@ -15,6 +15,7 @@
         <meta property="og:type" content="website">
         <meta property="og:description" content="Unofficial PurpleAir Dashboard in the style of airnow.gov but with more realtime data." >
 
+        <link rel="icon" href="icons/favicon.png" type="image/x-icon" />
         <link rel="stylesheet" type="text/css" href="css/main.css">
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
            integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
