Adding geolocation autocomplete to location input and updating style to match

--- a/static/index.html
+++ b/static/index.html
@@ -16,10 +16,12 @@
         <meta property="og:description" content="Unofficial PurpleAir Dashboard in the style of airnow.gov but with more realtime data." >
 
         <link rel="icon" href="icons/favicon.png" type="image/x-icon" />
-        <link rel="stylesheet" type="text/css" href="css/main.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.6/dist/css/autoComplete.min.css">
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
            integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
            crossorigin=""/>
+        <link rel="stylesheet" type="text/css" href="css/main.css">
+
     </head>
     <body>
         <div class="aqi-display-box" id="aqi-display-box">
@@ -53,6 +55,7 @@
         </div>
         <div id="map"></div>
 
+        <script src="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.6/dist/autoComplete.js"></script>
         <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
             integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
             crossorigin="" defer></script>
