Reorganizing to run within Docker. Just implementing development version for now.

--- a/flask-app/static/index.html
+++ b/flask-app/static/index.html
@@ -6,12 +6,12 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="canonical" href="https://ethanj.me/aqi/">
+        <link rel="canonical" href="https://${DOMAIN_NAME}${SCRIPT_NAME}">
 
         <meta name="description" content="Dashboard in the style of airnow.gov but with PurpleAir realtime data.">
         <meta property="og:title" content="PurpleAir Dashboard (Unofficial)">
-        <meta property="og:image" content="https://ethanj.me/aqi/images/og-image.png">
-        <meta property="og:url" content="https://ethanj.me/aqi/">
+        <meta property="og:image" content="https://${DOMAIN_NAME}${SCRIPT_NAME}/images/og-image.png">
+        <meta property="og:url" content="https://${DOMAIN_NAME}${SCRIPT_NAME}">
         <meta property="og:type" content="website">
         <meta property="og:description" content="Unofficial PurpleAir Dashboard in the style of airnow.gov but with more realtime data." >
 
